# rsomonte.github.io

./: .eleventy.js  .gitignore  404.html  index.html  package-lock.json  package.json  styles.css
.github/workflows/: deploy-to-ghpages.yml
_includes/: canvas.html  commonlayout.liquid  layout.html  postslayout.liquid
content/: 404.html  cv.md  file-indentifier.html  index.html  posts.html  tags.html  tags.njk  tools.html
content/posts/: bot_hosting.md  dev.update.11.25.md  languages.md  post1.md  post2.md  post3(languages).md  posts.json  taskerbot.md
content/tools/: file-indentifier.html  hash.html  room.js  roomcanvas.html
cv/: index.html
docs/: 404.html  index.html
docs/cv/: index.html
docs/posts/: index.html
docs/tags/: index.html
file-indentifier/: index.html
filetype_wasm/: Cargo.toml
filetype_wasm/src/: lib.rs
hasher_wasm/: Cargo.toml
hasher_wasm/src/: lib.rs
pkg/: filetype_wasm.d.ts  filetype_wasm.js  filetype_wasm_bg.wasm  filetype_wasm_bg.wasm.d.ts  hasher_wasm.d.ts  hasher_wasm.js  hasher_wasm_bg.wasm  hasher_wasm_bg.wasm.d.ts  package.json  ufile_wasm.d.ts  ufile_wasm.js  ufile_wasm_bg.wasm  ufile_wasm_bg.wasm.d.ts
posts/: index.html
posts/bot_hosting/: index.html
posts/dev.update.11.25/: index.html
posts/languages/: index.html
posts/post1/: index.html
posts/post2/: index.html
posts/post3(languages)/: index.html
posts/taskerbot/: index.html
tags/: index.html
tags/dev update/: index.html
tags/discord/: index.html
tags/docker/: index.html
tools/: index.html
ufile_wasm/: Cargo.toml
ufile_wasm/src/: lib.rs
(+14 files in other folders)
