[package]
name = "filetype-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# For WebAssembly bindings
wasm-bindgen = "0.2.100"

# Direct Git dependency on your core library
# IMPORTANT: Replace the URL with the actual URL of your core repository
filetype-core = { git = "https://github.com/rsomonte/filetype-core.git", branch = "main" }